@@ -8,6 +8,7 @@ Bug fixes:
 - PR#4967: ocamlbuild passes wrong switches to ocamldep through menhir
 - PR#5039: ocamlbuild should use '-linkpkg' only when linking programs
 - PR#5095: ocamlbuild ignores some tags when building bytecode objects
+- PR#5100: ocamlbuild always rebuilds a 'cmxs' file
 - PR#5103: build and install objinfo when building with ocamlbuild
 - PR#5110: invalid module name when using optional argument
 - PR#5165: ocamlbuild does not pass '-thread' option to ocamlfind
